--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .custom-navbar {
-    background-color: transparent;
+    background-color: white;
     /* Change to your preferred color */
     /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
     position: sticky;
@@ -13,7 +13,7 @@
     color: #000000;
     /* Change to your preferred color */
     font-weight: 500;
-    padding: 10px 15px;
+    padding: 10px 10px;
     transition: color 0.2s ease-in-out;
 }
 
@@ -21,3 +21,5 @@
     color: #003fd1;
     /* Change to your preferred hover color */
 }
+
+  
